# splicenft

./: .env.sample  .eslintrc  .gitignore  .prettierrc  404.html  LICENSE  NOTES.md  README.md  SETUP.md  covalent.xyz.http  index.html  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: docs.yml  tests.yml
api_samples/: covalent.xyz.http  nftport.xyz.http
artist_tools/: SpliceTemplateForBuildingStyleAlgorithm.js  Splice_TwitterHeaderTester_ForArtists.psd  sample_input.md  spliceTemplateForBuildingStyleAlgorithm.js  steps_to_deploy_a_Splice.md
artists/: index.html
builder/: Dockerfile  README.md
developers/: index.html
docs/: artists.md  developers.md  faqs.md  index.md  samples.md  users.md  vision.md
dominant-palette-kmeans-wasm/: Cargo.toml  README.md  test.http
dominant-palette-kmeans-wasm/demo-app/: README.md  next.config.js  package-lock.json  package.json
dominant-palette-kmeans-wasm/demo-app/src/pages/: index.tsx
dominant-palette-kmeans-wasm/demo-app/src/pages/api/: get_dominant_colors.ts
dominant-palette-kmeans-wasm/src/: lib.rs
faqs/: index.html
image-analysis/: Cargo.toml  README.md
image-analysis/demo-app/: package-lock.json  package.json
image-analysis/demo-app/src/pages/: index.tsx
image-analysis/demo-app/src/pages/api/: get_dominant_colors.ts
image-analysis/src/: lib.rs
matomo/: .gitignore  db.env.sample  docker-compose.yml  nginx.conf  nginx_gateway.conf
renderers/: ABeginningIsAVeryDelicateTime.js  ConfidenceInTheMission.js  Flower.js  TheGardenOfEarthlyDelights.js  deep_dream_algo.py
renderers/ABeginningIsAVeryDelicateTime/: metadata.json
renderers/AI_deep_style/: deep_style.py
renderers/ConfidenceInTheMission/: metadata.json
renderers/District1618/: code.js  metadata.json
renderers/TheGardenOfEarthlyDelights/: code.js  metadata.json
renderers/foo/: code.js  metadata.json
samples/: index.html
search/: search_index.json
users/: index.html
vision/: index.html
