[package]
name = "dominant-palette-kmeans"
version = "0.1.1"
authors = ["stadolf <stadolf@gmail.com>"]
edition = "2021"
repository = "https://github.com/SpliceNFT/splicenft/tree/experiment/wasm-palette/dominant-palette-kmeans-wasm"
keywords = ["palette", "colors", "kmeans", "images", "wasm"]
license = "MIT"
description = "A wasm library for finding the dominant colors in an image using kmeans clustering"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6.3"
image = {version="0.24.0", default-features = false, features = ["jpeg", "png", "gif", "webp"]}
js-sys = "0.3.54"
kmeans_colors = { version = "0.6.0", default-features = false, features=["palette_color"]}
palette = {version="0.7.3", default-features = false, features=["std"]}
getrandom = { version = "0.2", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
